# filex

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
backend/: Cargo.toml  build.rs
backend/src/: config.rs  lib.rs  main.rs  version.rs
backend/src/api/: auth.rs  browse.rs  files.rs  mod.rs  search.rs  sort.rs  system.rs
backend/src/db/: mod.rs  queries.rs  schema.rs
backend/src/models/: file.rs
backend/src/services/: filesystem.rs  indexer.rs  metadata.rs  mod.rs  search.rs  search_index.rs
docker/: Dockerfile  build.sh  docker-compose.yml  entrypoint.sh
docker/examples/: Caddyfile  docker-compose.caddy.yml  docker-compose.nginx.yml  nginx.conf
docs/: architecture.mermaid  browsing-flow.mermaid
frontend/: .prettierignore  eslint.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon-tahoe.icns  icon.icns
frontend/src-tauri/src/: lib.rs  main.rs  quicklook.swift
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
frontend/src/config/: layout.ts  pagination.ts
frontend/src/hooks/: useColumnResize.test.tsx  useColumnResize.ts  useDirectory.test.tsx  useDirectory.ts  useKeyboard.test.tsx  useKeyboard.ts  useSearch.test.tsx  useSearch.ts
frontend/src/lib/: config.ts  filePreview.ts  tauri.ts  url.ts  utils.test.ts  utils.ts
frontend/src/stores/: auth.test.ts  auth.ts  navigation.test.ts  navigation.ts  preview.ts  theme.test.ts  theme.ts  upload.test.ts  upload.ts
frontend/src/test/: setup.ts
frontend/src/types/: file.ts
macos/: AGENTS.md  CLAUDE.md
macos/Filex/: ContentView.swift  FilexApp.swift
macos/Filex.xcodeproj/: project.pbxproj
macos/Filex/Models/: APIResponses.swift  ClipboardState.swift  FileEntry.swift  PathMapping.swift  SortConfig.swift  TreeNode.swift
macos/Filex/Services/: APIClient.swift  APIError.swift  QuickLookController.swift  ServerConfiguration.swift
macos/Filex/Utilities/: DateFormatting.swift  FileUtils.swift  PathUtils.swift
macos/Filex/ViewModels/: DirectoryViewModel.swift  NavigationState.swift  PreviewViewModel.swift  SearchViewModel.swift  TreeViewModel.swift  UploadViewModel.swift
macos/FilexTests/: FilexTests.swift
macos/FilexUITests/: FilexUITests.swift  FilexUITestsLaunchTests.swift
(+72 files in other folders)
