[package]
name = "filemanager-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
walkdir = "2"
ignore = "0.4"  # From ripgrep author - fast directory walking

# Utilities
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
